--- a/wrong.html
+++ b/wrong.html
@@ -21,7 +21,7 @@
     <div class="container bg-success text-center p-5">
         <h1>Quiz Mansion</h1>
         <p>WRONG!!!</p>
-        <a href="sw1.html" class="btn btn-danger">
+        <a href="index.html" class="btn btn-danger">
             Retry?
         </a>
     </div>
